--- a/Tex/app_plots.tex
+++ b/Tex/app_plots.tex
@@ -1,15 +1,17 @@
 \chapter{Additional Graphs and Tables}
 \section{Simulation}
-\begin{table}[h!]
+
+\begin{table}
 	\caption{Ratio of $g^2-1$ of different photon counting schemes to ground truth value  for $\Delta$=1\, pixel/first maximum}
+	\label{tab:photonrecon}
+	
 	\begin{tabular}{llllll}
-		
 		\toprule
 		{} &           Raw &        Thres &         Comb &         PSANA &         MaxL \\
 		\midrule
-		Low Signal  &  12 / 0.6 &  6.9 / 0.6 &  0.6 / 0.8 &   -0.5 / 0.6 &  0.7 / 0.8 \\
-		High Signal &    2.4 / 1.0 &  1.8 / 1.0 &  0.7 / 0.8 &  -0.03 / 0.8 &  1.0 / 0.9 \\
-		High Noise  &    9.3 / 0.3 &  8.1 / 0.4 &  0.9 / 0.6 &  -0.4 / 0.4 &  0.6 / 0.6 \\
+		Low Signal  &  11.78 / 0.59 &  6.92 / 0.64 &  0.62 / 0.79 &   -0.50 / 0.66 &  0.57 / 0.81 \\
+		High Signal &    2.40 / 1.08 &  1.79 / 1.05 &  0.72 / 0.82 &  -0.03 / 0.79 &  1.04 / 0.95 \\
+		High Noise  &    9.34 / 0.3 &  8.08 / 0.39 &  1.02 / 0.58 &  -0.37 / 0.45 &  0.46 / 0.57 \\
 		\bottomrule
 	\end{tabular}
 \end{table}
