--- a/Tex/ffz.bib
+++ b/Tex/ffz.bib
@@ -1049,6 +1049,44 @@ The Compton scattering cross section in equation (110) is incorrect. It follows 
   url      = {https://doi.org/10.1107/S2052252516013956},
 }
 
+@Article{collaboration2014,
+  author    = {collaboration, The ATLAS},
+  journal   = {Journal of Instrumentation},
+  title     = {A neural network clustering algorithm for the ATLAS silicon pixel detector},
+  year      = {2014},
+  issn      = {1748-0221},
+  month     = {Sep},
+  number    = {09},
+  pages     = {P09009–P09009},
+  volume    = {9},
+  doi       = {10.1088/1748-0221/9/09/p09009},
+  publisher = {IOP Publishing},
+}
+
+@Article{schayck2020,
+  author   = {J. Paul {van Schayck} and Eric {van Genderen} and Erik Maddox and Lucas Roussel and Hugo Boulanger and Erik Fröjdh and Jan-Pieter Abrahams and Peter J. Peters and Raimond B.G. Ravelli},
+  journal  = {Ultramicroscopy},
+  title    = {Sub-pixel electron detection using a convolutional neural network},
+  year     = {2020},
+  issn     = {0304-3991},
+  pages    = {113091},
+  volume   = {218},
+  abstract = {Modern direct electron detectors (DEDs) provided a giant leap in the use of cryogenic electron microscopy (cryo-EM) to study the structures of macromolecules and complexes thereof. However, the currently available commercial DEDs, all based on the monolithic active pixel sensor, still require relative long exposure times and their best results have only been obtained at 300 keV. There is a need for pixelated electron counting detectors that can be operated at a broader range of energies, at higher throughput and higher dynamic range. Hybrid Pixel Detectors (HPDs) of the Medipix family were reported to be unsuitable for cryo-EM at energies above 80 keV as those electrons would affect too many pixels. Here we show that the Timepix3, part of the Medipix family, can be used for cryo-EM applications at higher energies. We tested Timepix3 detectors on a 200 keV FEI Tecnai Arctica microscope and a 300 keV FEI Tecnai G2 Polara microscope. A correction method was developed to correct for per-pixel differences in output. Timepix3 data were simulated for individual electron events using the package Geant4Medipix. Global statistical characteristics of the simulated detector response were in good agreement with experimental results. A convolutional neural network (CNN) was trained using the simulated data to predict the incident position of the electron within a pixel cluster. After training, the CNN predicted, on average, 0.50 pixel and 0.68 pixel from the incident electron position for 200 keV and 300 keV electrons respectively. The CNN improved the MTF of experimental data at half Nyquist from 0.39 to 0.70 at 200 keV, and from 0.06 to 0.65 at 300 keV respectively. We illustrate that the useful dose-lifetime of a protein can be measured within a 1 second exposure using Timepix3.},
+  doi      = {https://doi.org/10.1016/j.ultramic.2020.113091},
+  keywords = {Structural biology, Cryo-EM, Detectors, Neural network},
+}
+
+@Article{baumann2018,
+  author    = {Baumann, Jonas and Gnewkow, Richard and Staeck, Steffen and Szwedowski-Rammert, Veronika and Schlesiger, Christopher and Mantouvalou, Ioanna and Kanngie{\ss}er, Birgit},
+  journal   = {Journal of Analytical Atomic Spectrometry},
+  title     = {Photon event evaluation for conventional pixelated detectors in energy-dispersive X-ray applications},
+  year      = {2018},
+  number    = {12},
+  pages     = {2043--2052},
+  volume    = {33},
+  publisher = {Royal Society of Chemistry},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
 
 @Comment{jabref-meta: grouping:
