--- a/Tex/experiment.tex
+++ b/Tex/experiment.tex
@@ -213,16 +213,25 @@ During the experiment, an unnoticed failure of the electronics of the octal dete
 
 
 \paragraph{Spectra}
-The background subtracted and masked detector images are used to create spectra. On these spectra, a regression with a model consisting of peaks at multiples of the K$_\alpha$ energy and of the excitation energy with an initial FWHM of 500\,eV and intensities following a negative binomial distribution (signal) or Poisson distribution (scattering noise) is performed, minimizing the squared difference the logarithmic values. To roughly approximate the charge sharing, a numerical convolution with a  window of the shape
+The background subtracted and masked detector images are used to create spectra. On these spectra, a regression with a model consisting of peaks at multiples of the K$_\alpha$, K$_\beta$ and of the excitation energy with an initial FWHM of 500\,eV and intensities following a negative binomial distribution (signal) or Poisson distribution (scattering noise) is performed, minimizing the squared difference the logarithmic values. To roughly approximate the charge sharing, a numerical convolution with a  window of the shape
 \begin{equation}
 	w (x)= (1-p)\delta(x)+\rect\left(\frac{x-1/2}{E_{signal}}\right)*\frac{p}{E_{signal}}
 \end{equation}
 is performed, thus smearing the peaks to lower energies with a strength parameter $p$ (initialized as 25\%).
 With this regression, an estimate for the number of modes of the binomial distribution as well as for the mean number of signal and scattering photons is found.
 
+The recorded data is categorized into a smaller number of groups by the apparent similarity of the spectra : The foil data is group into the classes, one for copper foils, one for 10um thick iron foils and one for 500\,nm thick foils.
+
+
 \paragraph{Photon counting}
 
-The mean number of signal and scattering photons found from the spectra as well as the peak width and the (known) charge sharing PSF for the detectors are used to find the thresholds for a classification of the pixel values into signal photon numbers as described in \fref{sec:chargesharing}.
+The mean number of signal and scattering photons found from the spectra as well as the peak width and the  charge sharing point spread function for the detectors are used to find the thresholds for a classification of the pixel values into signal photon numbers for each of the groups as described in \fref{sec:chargesharing} by simulating 1000 images with 4096x4096 pixels with the determined K$_\alpha$, K$_\beta$ and scattering intensities, applying the charge sharing simulation and using the determined FWHM as a (assumed Gaussian) detector noise to estimate the number of signal photons corresponding with the highest probability to each energy bin of 10\,eV. This is done once  considering the K$_\beta$ photons as noise and once as signal, leading the different thresholds.
+
+Furthermore, a third way of photon counting is done by simple rounding to the closest number of signal photons, not considering any scattering or other sources of noise. 
+
+
+
+
 
 
 
