--- a/Tex/app_plots.tex
+++ b/Tex/app_plots.tex
@@ -1,19 +1,20 @@
 \chapter{Additional Graphs and Tables}
 \section{Simulation}
 
-\begin{table}
-	\caption{Ratio of $g^2-1$ of different photon counting schemes to ground truth value  for $\Delta$=1\, pixel/first maximum}
+\begin{table}[h!]
+	\caption[Ratio of $g^2-1$ of different photon counting schemes to ground truth value]{Ratio of $g^2-1$ of different photon counting schemes to ground truth value  for $\Delta$=1\, pixel/first maximum. \textit{Closest} is \textit{Combination} without considering Noise photons, giving good results in the low noise cases.}
 	\label{tab:photonrecon}
 	
-	\begin{tabular}{llllll}
-		\toprule
-		{} &           Raw &        Thres &         Comb &         PSANA &         MaxL \\
-		\midrule
-		Low Signal  &  11.78 / 0.59 &  6.92 / 0.64 &  0.62 / 0.79 &   -0.50 / 0.66 &  0.57 / 0.81 \\
-		High Signal &    2.40 / 1.08 &  1.79 / 1.05 &  0.72 / 0.82 &  -0.03 / 0.79 &  1.04 / 0.95 \\
-		High Noise  &    9.34 / 0.3 &  8.08 / 0.39 &  1.02 / 0.58 &  -0.37 / 0.45 &  0.46 / 0.57 \\
-		\bottomrule
-	\end{tabular}
+\begin{tabular}{lllllll}
+	\toprule
+	 &        Raw &       Threshold &         Combination &      Closest &         MaxL &          PSANA \\
+	\midrule
+	Low Signal  &  12 / 0.59 &  6.9 / 0.64 &  0.62 / 0.79 &  0.88 / 0.68 &  0.57 / 0.81 &    -0.5 / 0.66 \\
+	High Signal &  2.4 / 1.1 &   1.8 / 1.0 &  0.72 / 0.82 &   1.1 / 0.96 &   1.0 / 0.95 &  -0.026 / 0.79 \\
+	High Noise  &  9.3 / 0.3 &  8.1 / 0.39 &   1.0 / 0.58 &   1.3 / 0.46 &  0.44 / 0.54 &   -0.37 / 0.45 \\
+	\bottomrule
+\end{tabular}
+
 \end{table}
 
 \section{Experiment}
