--- a/Tex/title.tex
+++ b/Tex/title.tex
@@ -10,7 +10,7 @@
 					
 			{\newcommand{\HRule}{\rule{\linewidth}{0.5mm}}
 				\HRule \\[0.4cm]
-				\LARGE{\bfseries Incoherent Imaging Using X-Ray Fluorescence}\\
+				\LARGE{\bfseries Incoherent Imaging with X-Ray Fluorescence}\\
 							
 				\HRule \\[1.5cm]}
 			\textsc{\Large Master Thesis}\\[0.5cm]
