add result plots

--- a/Tex/conclusion.tex
+++ b/Tex/conclusion.tex
@@ -1,5 +1,10 @@
 \chapter{Conclusion and Outlook}
 
+
+\section{Using Incoherent Imaging for Online Beam Diagnostic}
+
+
+
 The posibility to run an IDI setup in parallel with other detectors would allow for a combination of IDI with CDI
 
 Larger detectors
@@ -17,6 +22,24 @@ An avenue for improvement is subpixel resolution of the photon hits and better u
 
 
 
+\section{Experimental Improvements}
+
+
+
+\begin{figure}
+	\centering
+	\begin{subfigure}[b]{0.50\textwidth}
+	\includegraphics[width=\linewidth]{images/lv65simA.pdf}
+	\caption{Nano-Grating}
+	\label{fig:outlook_grating}
+\end{subfigure}
+\begin{subfigure}[b]{0.37\textwidth}
+	\includegraphics[width=\linewidth]{images/lv65simB.pdf}
+	\caption{AAO Membranes}
+	\label{fig:outlook_aao}
+\end{subfigure}
+\caption[Simulations in Preparation of LV65 Experiment]{Examples of simulations performed with the tools developed in this thesis in preparation of an additional experiment (LV65) at the LCLS free electron laser.}
+\end{figure}
 
 Upcoming experiment using sub-1\,fs pulse length as LCLS. 
 For this experiment, two new, signal optimized samples were chosen: Anodic Aluminum Oxide (AAO) membranes with regular spaced XX pores, with are filled with Nickel or Vanadium using atomic layer deposition, creating an array of hexagonal placed  500\,nm long cylinders. As the order of the self-organizing pores is smaller than the area used in the experiment, the simulated reconstruction shows rings (\fref{fig:outlook_aao}). Using realistic simulation parameters, XXX images should suffice to reach a SNR of XXX.
@@ -24,3 +47,5 @@ The other sample is will be a litographically procuced gratings with a pitches o
 
 
 Furthermore, for the randomly in plane oriented pores, the SNR might be improved by considering the polar correlations in the single image reconstructions as described in XXX
+
+\subsection{First results of LV65 Experiment}
